[FIX] discuss: channel name overflow
Before this commit:
The channel name used to overflow in the channel suggestion section.

After this commit:
The name will not overflow in the channnel suggestion section.

Task id: 3366608

closes odoo/odoo#126359

--- a/addons/mail/static/src/components/discuss_sidebar/discuss_sidebar.scss
+++ b/addons/mail/static/src/components/discuss_sidebar/discuss_sidebar.scss
@@ -48,6 +48,10 @@
     margin-right: $o-mail-discuss-sidebar-scrollbar-width;
 }
 
+.o_DiscussSidebar_newChannelAutocompleteSuggestions {
+    word-wrap: break-word;
+}
+
 .o_DiscussSidebar_quickSearch {
     border-radius: 10px;
     margin: 0 $o-mail-discuss-sidebar-scrollbar-width 10px;
